@@ -11,13 +11,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
     </properties>
 
-
     <build>
-
         <plugins>
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -61,13 +59,6 @@
                             <directory>tests-negative</directory>
                             <includes>
                                 <include>**/*.meta</include>
-                            </includes>
-                            <followSymlinks>false</followSymlinks>
-                        </fileset>
-                        <fileset>
-                            <directory>src/main/java/shadow/jaxb</directory>
-                            <includes>
-                                <include>*.java</include>
                             </includes>
                             <followSymlinks>false</followSymlinks>
                         </fileset>
@@ -117,46 +108,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>10</source>
-                    <target>10</target>
+                    <source>13</source>
+                    <target>13</target>
                 </configuration>
-                <!-->configuration>
-                    <release>11</release>
-                </configuration-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jaxb2-maven-plugin</artifactId>
-                <version>2.5.0</version>
-                <executions>
-                    <execution>
-                        <id>xjc</id>
-                        <goals>
-                            <goal>xjc</goal>
-                        </goals>
-
-                    </execution>
-                </executions>
-                <configuration>
-                    <!-->sources>
-                            <source>src/main/resources/dummy.xsd</source>
-                            <source>src/main/resources/configuration.xsd</source>
-                        </sources-->
-                    <outputDirectory>src/main/java</outputDirectory>
-                    <packageName>shadow.jaxb</packageName>
-                    <episodeFileName>episode</episodeFileName>
-                    <clearOutputDir>false</clearOutputDir>
-                    <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
-                </configuration>
-
             </plugin>
             <plugin>
                 <groupId>org.antlr</groupId>
@@ -209,19 +168,6 @@
             </plugins>
         </pluginManagement>
     </build>
-    <reporting>
-        <plugins>
-            <!--
-                  <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.9.1</version>
-                    <configuration>
-                    </configuration>
-                  </plugin>
-            -->
-        </plugins>
-    </reporting>
     <dependencies>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -279,26 +225,9 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jaxb2-maven-plugin</artifactId>
-            <version>2.5.0</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.jaxb</groupId>
-            <artifactId>jaxb-runtime</artifactId>
-            <version>2.3.2</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
-            <version>1.2.1</version>
-            <scope>runtime</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.3</version>
         </dependency>
     </dependencies>
 </project>
